app2/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      selector: app2
  template:
    metadata:
      labels:
        app: app2
        selector: app2
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      automountServiceAccountToken: false
      containers:
        - name: pgweb
          image: sosedoff/pgweb:0.12.0
          imagePullPolicy: Always
          resources:
            requests:
              memory: 64Mi
              cpu: 0.1m
            limits:
              cpu: 0.25m
              memory: 128Mi
