app2/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  selector:
    selector: app2
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081
